--- a/.github/workflows/black-formating.yml
+++ b/.github/workflows/black-formating.yml
@@ -4,10 +4,10 @@ name: Black Code Formatter
 on:
   push:
     branches:
-      - main  # Replace with your default branch if not 'main'
+      - main  
   pull_request:
     branches:
-      - main  # Replace with your default branch if not 'main'
+      - main  
 
 jobs:
   black:
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.10'
 
     - name: Install Black
       run: pip install black
