Refactor project structure
- Consolidate main packages into 'app/' directory
- Set up tests in 'tests/' directory
- Integrate Docker support
- Introduce Poetry for dependency management
- Configure Docker Compose

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 torch = "^2.0.1"
+pytest = "^7.4.2"
 
 [tool.poetry.dev-dependencies]
 
