Refactor project structure
- Consolidate main packages into 'app/' directory
- Set up tests in 'tests/' directory
- Integrate Docker support
- Introduce Poetry for dependency management
- Configure Docker Compose

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,8 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 
 # Install poetry and dependencies
-RUN pip install poetry
+RUN curl -sSL https://install.python-poetry.org | python3 -
+
 RUN poetry config virtualenvs.create false
 
 COPY pyproject.toml poetry.lock ./
