--- a/docker/Dockerfile_VoiceToText
+++ b/docker/Dockerfile_VoiceToText
@@ -14,10 +14,9 @@ COPY pyproject.toml poetry.lock ./
 # Copy project directory
 COPY app/VoiceToText /app
 
-# Create an empty README.md file
-#RUN touch README.md
+# Copy audio file into the container
+COPY app/VoiceToText/audio_asset/audio.wav /app/VoiceToText/audio_asset/audio.wav
 
 # Configure poetry to not create a virtual environment and install dependencies
 RUN poetry config virtualenvs.create false && \
     poetry install --no-dev
-
