Fixed baseimage and file path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,14 @@
-#version: '3.8'
 version: '2.2'
 
-
 services:
-  transcribe: # This is the name of the service, image: docker-compose build transcribe container: docker-compose up transcribe
+  transcribe:
     build:
       context: .
       dockerfile: docker/Dockerfile_VoiceToText
     volumes:
-      - .:/app
-    command:
-      - python
-      - app/VoiceToText/transcribeMain.py
+      - .:/app  # Mounts the current directory to /app in the container
+    command: ["python", "/app/app/VoiceToText/transcribeMain.py"]
+
 
 
 # This will be updated to run the LLM
