flask image up - no sd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
       dockerfile: Dockerfile
     command:
       - python
-      - /app/transcribeMain.py
+      - /app/flaskRecord.py
+
+
 
 
 
