--- a/app/VoiceToText/Dockerfile
+++ b/app/VoiceToText/Dockerfile
@@ -1,6 +1,10 @@
 # Use the Python 3.10 image
 FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
 
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y portaudio19-dev libsndfile1 apt-utils
+
+
 # Install the latest version of poetry
 RUN pip install --upgrade pip && \
     pip install poetry
@@ -18,3 +22,4 @@ COPY app/ ./
 RUN poetry config virtualenvs.create false && \
     poetry install --no-dev
 
+EXPOSE 5000
