--- a/app/Llm/Dockerfile
+++ b/app/Llm/Dockerfile
@@ -1,5 +1,4 @@
 # Use the Python 3.10 image
-# If CUDA is needed, go for this image
 FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
 
 # Install the latest version of poetry
@@ -18,3 +17,5 @@ COPY app/ ./
 # Configure poetry to not create a virtual environment and install dependencies
 RUN poetry config virtualenvs.create false && \
     poetry install --no-dev
+
+EXPOSE 5000
