temp record to fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,35 +4,34 @@ services:
   transcribe:
     build:
       context: ./app/VoiceToText
+      dockerfile: Dockerfile-magic
+    volumes:
+      - ./app/VoiceToText/app:/voice-to-text-app
+      - ./app/TextToVoice/app:/text-to-voice-app
+      #- ./app/VoiceToText/app/audio_asset:/app/audio_asset
+    ports:
+      - "5000:5000"
+    environment:
+        - FLASK_ENV=development
+        - FLASK_DEBUG=1
+
+  recorded_file:
+    depends_on:
+      - transcribe
+    build:
+      context: ./app/VoiceToText
+      dockerfile: Dockerfile-flask
+    ports:
+        - "6000:6000"
+
+  texttovoice:
+    depends_on:
+      - transcribe
+    build:
+      context: ./app/TextToVoice
       dockerfile: Dockerfile
     command:
       - python
-      - /app/flaskRecord.py
-
-
-
-
-
-# This will be updated to run the LLM
-#  llm:
-#    depends_on:
-#      - transcribe
-#    build:
-#        context: .
-#        dockerfile: docker/Dockerfile_Llm
-#    volumes:
-#      - .:/app
-#    # No command yet, we'll add that in a minute
-#
-
-# This will be updated to run the text to voice
-#  textToVoice:
-#    depends_on:
-#      - llm
-#    build:
-#        context: .
-#        dockerfile: docker/Dockerfile_TextToVoice
-#    volumes:
-#      - .:/app
-#    # No command yet, we'll add that in a minute
-#
+      - /text-to-voice-app/start_texttovoice.py
+    volumes:
+      - ./app/TextToVoice/app:/text-to-voice-app
