--- a/app/VoiceToText/Dockerfile-flask
+++ b/app/VoiceToText/Dockerfile-flask
@@ -22,4 +22,7 @@ COPY app/ ./
 RUN poetry config virtualenvs.create false && \
     poetry install --no-dev
 
-EXPOSE 5000
+EXPOSE 6000
+#CMD ["python", "/app/transcribemagic.py"]
+
+CMD ["python", "/app/flaskRecord.py"]
