--- a/app/VoiceToText/pyproject.toml
+++ b/app/VoiceToText/pyproject.toml
@@ -29,7 +29,8 @@ Flask = "^2.1"
 sounddevice="^0.4.6"
 cffi = "^1.15.1"
 setuptools = "68.2.2"
-soundfile = "^0.11.0"
+soundfile = "^0.12.0"
+librosa = "^0.10.1"
 
 
 [tool.poetry.dev-dependencies]
