Stacture refactor, relay of jason to t2v and audio gen works

--- a/app/VoiceToText/Dockerfile
+++ b/app/VoiceToText/Dockerfile
@@ -22,7 +22,7 @@ COPY app/ ./
 RUN poetry config virtualenvs.create false && \
     poetry install --no-dev
 
-EXPOSE 6000
+EXPOSE 5000
 #CMD ["python", "/app/transcribemagic.py"]
 
-CMD ["python", "/app/flaskRecord.py"]
+CMD ["python", "/app/transcribeApp.py"]
