--- a/app/TextToVoice/pyproject.toml
+++ b/app/TextToVoice/pyproject.toml
@@ -9,6 +9,8 @@ license = "MIT"
 python = "^3.10"
 torch = "^2.0.1"
 pytest = "^7.4.2"
+suno-bark = {git = "https://github.com/suno-ai/bark.git"}
+soundfile = "^0.12.1"
 
 [tool.poetry.dev-dependencies]
 
