--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 llama_models/
-
+models/
+.models/
+*.pt
+.env
+*.json
 # C extensions
 *.so
 
@@ -26,8 +30,6 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
-*.json
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
