--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,21 @@ services:
     ports:
       - "5000:5000"
 
-  texttovoice:
+  llm:
     depends_on:
       - transcribe
+    build:
+      context: ./app/Llm
+      dockerfile: Dockerfile
+    command:
+      - python
+      - /llm-app/start_llm.py
+    volumes:
+      - ./app/Llm/app:/llm-app
+
+  texttovoice:
+    depends_on:
+      - llm
     build:
       context: ./app/TextToVoice
       dockerfile: Dockerfile
