Code refactor and documentation

--- a/app/Llm/Dockerfile
+++ b/app/Llm/Dockerfile
@@ -1,9 +1,13 @@
 # Use the Python 3.10 image
 FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
+RUN pip install transformers==4.30
+RUN pip install accelerate
+RUN pip install -i https://test.pypi.org/simple/ bitsandbytes
 
 # Install the latest version of poetry
 RUN pip install --upgrade pip && \
     pip install poetry
+
 
 # Set the working directory
 WORKDIR /app
@@ -18,6 +22,6 @@ RUN poetry config virtualenvs.create false && \
 # Copy only the contents of the app directory
 COPY app/ ./
 
-EXPOSE 5000
+EXPOSE 6000
 
 CMD ["python", "app.py"]
