--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '2.3'
+version: '2.2'
 
 services:
-  # Transcribe service
   transcribe:
     build:
       context: ./app/VoiceToText
@@ -11,10 +10,21 @@ services:
     ports:
       - "5000:5000"
 
-  # Text-to-voice service
-  texttovoice:
+  llm:
     depends_on:
       - transcribe
+    build:
+      context: ./app/Llm
+      dockerfile: Dockerfile
+    command:
+      - python
+      - /llm-app/start_llm.py
+    volumes:
+      - ./app/Llm/app:/llm-app
+
+  texttovoice:
+    depends_on:
+      - llm
     build:
       context: ./app/TextToVoice
       dockerfile: Dockerfile
@@ -23,15 +33,3 @@ services:
       - /text-to-voice-app/start_texttovoice.py
     volumes:
       - ./app/TextToVoice/app:/text-to-voice-app
-
-# Uncomment the following lines to enable the LLM service
-#  llm:
-#    depends_on:
-#      - transcribe
-#    build:
-#      context: ./app/Llm
-#      dockerfile: Dockerfile
-#    volumes:
-#      - ./app/Llm/app:/llm-app
-#    ports:
-#      - "6000:6000"
