Test Llam2 in server

--- a/app/Llm/Dockerfile
+++ b/app/Llm/Dockerfile
@@ -1,14 +1,14 @@
-# Use the Python 3.10 image
-#FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
+# Use the NVIDIA CUDA image
 FROM nvidia/cuda:12.2.0-runtime-ubuntu22.04
-RUN pip install transformers==4.30
-RUN pip install accelerate
-RUN pip install -i https://test.pypi.org/simple/ bitsandbytes
 
-# Install the latest version of poetry
-RUN pip install --upgrade pip && \
-    pip install poetry
+# Install Python and pip
+RUN apt-get update && apt-get install -y python3 python3-pip
 
+# Upgrade pip and install necessary packages
+RUN pip3 install --upgrade pip && \
+    pip3 install transformers==4.30 accelerate && \
+    pip3 install -i https://test.pypi.org/simple/ bitsandbytes && \
+    pip3 install poetry
 
 # Set the working directory
 WORKDIR /app
@@ -25,4 +25,4 @@ COPY app/ ./
 
 EXPOSE 6000
 
-CMD ["python", "app.py"]
+CMD ["python3", "app.py"]
