--- a/app/Llm/Dockerfile
+++ b/app/Llm/Dockerfile
@@ -1,5 +1,5 @@
 # Use the NVIDIA CUDA image
-FROM nvidia/cuda:12.2.0-runtime-ubuntu22.04
+FROM nvidia/cuda:12.2.0-devel-ubuntu22.04
 
 # Install Python, pip, and other utilities
 RUN apt-get update && apt-get install -y python3 python3-pip curl && apt-get clean && rm -rf /var/lib/apt/lists/*
