--- a/app/Llm/pyproject.toml
+++ b/app/Llm/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
-#transformers = "^4.33.2"
+transformers = "^4.33.2"
 langchain = "^0.0.300"
 flask = "^2.3.3"
 sentencepiece = "^0.1.99"
@@ -16,6 +16,7 @@ protobuf = "^4.24.3"
 scipy = "^1.11.2"
 python-dotenv = "^1.0.0"
 accelerate = "^0.23.0"
+bitsandbytes = "^0.41.1"
 
 [build-system]
 requires = ["poetry-core"]
