--- a/app/Llm/pyproject.toml
+++ b/app/Llm/pyproject.toml
@@ -17,6 +17,7 @@ scipy = "^1.11.2"
 python-dotenv = "^1.0.0"
 accelerate = "^0.23.0"
 bitsandbytes = "^0.41.1"
+torch = "2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
