--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./app/Llm/app:/llm-app
+    ports:
+      - "8000:8000"
     deploy:
       resources:
         reservations:
