--- a/app/TextToVoice/pyproject.toml
+++ b/app/TextToVoice/pyproject.toml
@@ -11,6 +11,7 @@ torch = "^2.0.1"
 pytest = "^7.4.2"
 suno-bark = {git = "https://github.com/suno-ai/bark.git"}
 soundfile = "^0.12.1"
+flask = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 
