rectify mapping audioasset

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./app/TextToVoice/app:/text-to-voice-app
       - ./app/Llm/app:/llm-app
+      - ./app/VoiceToText/app/audio_asset:/app/audio_asset
     ports:
       - "5000:5000"
 
