--- a/app/TextToVoice/pyproject.toml
+++ b/app/TextToVoice/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^7.4.2"
 suno-bark = {git = "https://github.com/suno-ai/bark.git"}
 soundfile = "^0.12.1"
 flask = "^3.0.0"
+nltk = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 
