Edit sm-c, Implement V2V and update yml

--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -1,20 +1,39 @@
-# Use the Python 3.10 image
-# If CUDA is needed, go for this image
-FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
+# Use an official Python runtime as the base image
+FROM python:3.8-slim-buster
 
-# Install the latest version of poetry
-RUN pip install --upgrade pip && \
-    pip install poetry
+# Set the maintainer label
+LABEL maintainer="jacksonherberts@gmail.com"
+
+# Set environment variables
+ENV PYTHONUNBUFFERED 1
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    software-properties-common \
+    ffmpeg \
+    git \
+    && apt-get clean
+
+# Clone the SadTalker repository
+RUN git clone https://github.com/Winfredy/SadTalker /SadTalker
 
 # Set the working directory
-WORKDIR /app
+WORKDIR /VoiceToVideo-app
 
-# Copy the pyproject.toml and poetry.lock files
-COPY pyproject.toml poetry.lock ./
+# Install Python dependencies
+RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
+RUN pip install -r requirements.txt
 
-# Copy only the contents of the app directory
-COPY app/ ./
+RUN apt-get install -y wget
 
-# Configure poetry to not create a virtual environment and install dependencies
-RUN poetry config virtualenvs.create false && \
-    poetry install --no-dev
+# Download pre-trained models
+RUN bash scripts/download_models.sh
+
+COPY . /VoiceToVideo-app
+
+# Expose any ports the app is expecting in the environment
+# If the application runs on a specific port, expose it. For example:
+EXPOSE 5005
+
+# Define the command to run on container start
+CMD ["python3.8", "main.py"]
