struggle with video yml

--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -19,7 +19,7 @@ RUN git clone https://github.com/Winfredy/SadTalker /VoiceToVideo-app
 
 # Set the working directory
 WORKDIR /VoiceToVideo-app
-COPY . /VoiceToVideo-app
+COPY . .
 
 # Install Python dependencies
 RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
