--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -15,7 +15,8 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean
 
 # Clone the SadTalker repository
-RUN git clone https://github.com/Winfredy/SadTalker /VoiceToVideo-app
+RUN git clone https://github.com/OpenTalker/SadTalker /VoiceToVideo-app
+
 
 # Set the working directory
 WORKDIR /VoiceToVideo-app
