--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -20,7 +20,7 @@ RUN git clone https://github.com/OpenTalker/SadTalker /VoiceToVideo-app
 
 # Set the working directory
 WORKDIR /VoiceToVideo-app
-COPY . .
+#COPY . .
 
 # Install Python dependencies
 RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
