docker file update for vg

--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -14,13 +14,14 @@ RUN apt-get update && apt-get install -y \
     git \
     && apt-get clean
 
-# Clone the SadTalker repository
-RUN git clone https://github.com/OpenTalker/SadTalker /VoiceToVideo-app
-
+# Clone the SadTalker repository into a temporary directory
+RUN git clone https://github.com/OpenTalker/SadTalker /tmp/SadTalker
 
 # Set the working directory
 WORKDIR /VoiceToVideo-app
-#COPY . .
+
+# Copy the cloned repository contents into the working directory
+COPY /tmp/SadTalker/ .
 
 # Install Python dependencies
 RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
@@ -32,8 +33,7 @@ RUN apt-get install -y wget
 # Download pre-trained models
 RUN bash scripts/download_models.sh
 
-# Expose any ports the app is expecting in the environment
-# If the application runs on a specific port, expose it. For example:
+# Expose the required port
 EXPOSE 5005
 
 # Define the command to run on container start
