--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -22,8 +22,9 @@ WORKDIR /VoiceToVideo-app
 
 # Move the cloned repository contents into the working directory
 RUN mv /tmp/SadTalker/* /tmp/SadTalker/.[!.]* .
-COPY videoGen.py /VoiceToVideo-app/
-COPY photos /VoiceToVideo-app/photos/
+COPY app/videoGen.py /VoiceToVideo-app/
+COPY app/photos /VoiceToVideo-app/photos/
+
 # Install Python dependencies
 RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
 RUN pip install -r requirements.txt
