--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -15,14 +15,13 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean
 
 # Set the working directory
-WORKDIR /VoiceToVideo-app
+WORKDIR /sadTalker
 
-# Clone the SadTalker repository into a temporary directory
-RUN git clone https://github.com/OpenTalker/SadTalker .
+RUN git clone https://github.com/OpenTalker/SadTalker  /sadTalker
 
 # Move the cloned repository contents into the working directory
-COPY app/videoGen.py /VoiceToVideo-app/
-COPY app/photos /VoiceToVideo-app/photos/
+COPY app/ ./
+COPY app/ ./
 
 # Install Python dependencies
 RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
