--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       context: ./app/VoiceToVideo
       dockerfile: Dockerfile
     volumes:
-      - ./app/VoiceToVideo/app:/sadTalker
+      - ./app/VoiceToVideo/app:/VoiceToVideo-app
     ports:
       - "5005:5005"
     depends_on:
