--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -17,20 +17,19 @@ RUN apt-get update && apt-get install -y \
 # Set the working directory
 WORKDIR /VoiceToVideo-app
 
-RUN git clone https://github.com/OpenTalker/SadTalker  /SadTalker
+RUN git clone https://github.com/OpenTalker/SadTalker
 
-# Move the cloned repository contents into the working directory
 COPY app/ ./
 
 # Install Python dependencies
 RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
-RUN pip install -r SadTalker/requirements.txt
+RUN pip install -r requirements.txt
 RUN pip install Flask
 
 RUN apt-get install -y wget
 
 # Download pre-trained models
-RUN bash SadTalker/scripts/download_models.sh
+RUN bash scripts/download_models.sh
 
 # Expose the required port
 EXPOSE 5005
