--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -14,27 +14,26 @@ RUN apt-get update && apt-get install -y \
     git \
     && apt-get clean
 
+# Clone the SadTalker repository
+RUN git clone https://github.com/Winfredy/SadTalker /SadTalker
+
 # Set the working directory
-WORKDIR /sadTalker
-
-RUN git clone https://github.com/OpenTalker/SadTalker  /sadTalker
-
-# Move the cloned repository contents into the working directory
-COPY app/ ./
-#COPY app/ ./
+WORKDIR /SadTalker
 
 # Install Python dependencies
 RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
 RUN pip install -r requirements.txt
-RUN pip install Flask
 
 RUN apt-get install -y wget
 
 # Download pre-trained models
 RUN bash scripts/download_models.sh
 
-# Expose the required port
-EXPOSE 5005
+COPY . /SadTalker/
+
+# Expose any ports the app is expecting in the environment
+# If the application runs on a specific port, expose it. For example:
+# EXPOSE 5000
 
 # Define the command to run on container start
-CMD ["python3.8", "videoGen.py"]
+CMD ["python3.8", "main.py"]
