--- a/app/VoiceToVideo/Dockerfile
+++ b/app/VoiceToVideo/Dockerfile
@@ -25,6 +25,7 @@ RUN pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1
 RUN pip install -r requirements.txt
 
 RUN apt-get install -y wget
+RUN pip install Flask
 
 # Download pre-trained models
 RUN bash scripts/download_models.sh
