--- a/app/TextToVoice/pyproject.toml
+++ b/app/TextToVoice/pyproject.toml
@@ -13,6 +13,8 @@ suno-bark = {git = "https://github.com/suno-ai/bark.git"}
 soundfile = "^0.12.1"
 flask = "^3.0.0"
 nltk = "^3.8.1"
+torchaudio = "^2.1.0"
+omegaconf = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 
