--- a/app/TextToVoice/pyproject.toml
+++ b/app/TextToVoice/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.10"
 torch = "^2.0.1"
 pytest = "^7.4.2"
-suno-bark = {git = "https://github.com/suno-ai/bark.git"}
+#suno-bark = {git = "https://github.com/suno-ai/bark.git"}
 soundfile = "^0.12.1"
 flask = "^3.0.0"
 nltk = "^3.8.1"
