--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 #version: '3.8' # docker-compose version enable to print diagram
-
 services:
   # Transcribe service
   transcribe:
@@ -10,8 +9,8 @@ services:
       - ./app/TextToVoice/app:/text-to-voice-app
       - ./app/Llm/app:/llm-app
       - ./app/VoiceToText/app/audio_asset:/app/audio_asset
-    ports:
-      - "5000:5000"
+    #ports:
+      #- "5000:5000"
     labels:
       "docker-compose_diagram.description": "Transcribe in put voice to text"
       "docker-compose_diagram.icon": "fas fa-microphone"
@@ -56,7 +55,7 @@ services:
       - ./app/TextToVoice/app:/text-to-voice-app
     ports:
         - "5003:5003"
-        - "5004:5004"
+        #- "5004:5004"
     labels:
       "docker-compose_diagram.description": "Converts text to voice"
       "docker-compose_diagram.icon": "fas fa-volume-up"
