add nvidia base imade

--- a/app/TextToVoice/Dockerfile
+++ b/app/TextToVoice/Dockerfile
@@ -1,5 +1,9 @@
 # Use the specific PyTorch image with CUDA support
-FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
+#FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
+FROM nvidia/cuda:11.7.0-cudnn8-runtime-ubuntu20.04
+
+RUN apt-get update && apt-get install -y python3-pip && \
+    pip3 install torch torchaudio
 
 # Set non-interactive mode for apt-get, update and install necessary packages
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
@@ -9,6 +13,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     apt-utils && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y libcufft11 libcublas11 && apt-get clean
 
 # Upgrade pip and install poetry
 RUN pip install --upgrade pip && \
